# magellan-tools

./: .gitignore  404.html  README.md  mkdocs.yml  os,sys  pyproject.toml
asteroids_ephemeris/: index.html
docs/: asteroids_ephemeris.md  catalogs.md  exposure_time_estimator.md  index.md  slit_orientation.md  stars_coords.md
exposure_time_estimator/: index.html
site/: index.html  search.html
site/search/: search_index.json
site/slit_orientation/: index.html
site/stars_coords/: index.html
src/magellan/: core.py
src/magellan/scripts/: magellan_asteroids_ephemeris.py  magellan_catalog.py  magellan_stars_coords.py  mike_exposure_time_estimator.py  mike_slit_orientation.py
src/magellan_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
