[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magellan_tools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies=["astroplan","astropy","scipy","astroquery>=0.4.11"]


[project.scripts]
mike_slit_orientation = "magellan.scripts.mike_slit_orientation:main"
mike_exposure_time_estimator = "magellan.scripts.mike_exposure_time_estimator:main"
magellan_stars_coords = "magellan.scripts.magellan_stars_coords:main"
magellan_asteroids_ephemeris="magellan.scripts.magellan_asteroids_ephemeris:main"


